Closed
Bug 1356119
Opened 8 years ago
Closed 8 years ago
Do not Flush() old context after device reset
Categories
(Core :: Graphics, defect)
Core
Graphics
Tracking
()
RESOLVED
FIXED
mozilla55
People
(Reporter: kechen, Assigned: kechen)
References
Details
Attachments
(2 files, 1 obsolete file)
|
3.31 KB,
patch
|
kechen
:
review+
|
Details | Diff | Splinter Review |
|
2.50 KB,
patch
|
jcristau
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
Per Bug 1351349 comment 7, I think we should not call Flush() to an old context since it might cause crashes.
| Comment hidden (mozreview-request) |
| Assignee | ||
Comment 2•8 years ago
|
||
Hello David,
Could you help me to confirm the bug and review this patch ? I am not sure if this patch can actually solve the problem rather than redirect the crash to another crash signature.
Updated•8 years ago
|
Flags: needinfo?(dvander)
Comment on attachment 8857771 [details]
Bug 1356119 - Skip Flush to old context after device reset;
I honestly don't know if this will help. It's worth trying and seeing if this crash goes away and another one spikes. We can always back it out later.
Flags: needinfo?(dvander)
Attachment #8857771 -
Flags: review?(dvander) → review+
| Assignee | ||
Comment 4•8 years ago
|
||
Carry r+ from comment 3.
[1] https://treeherder.mozilla.org/#/jobs?repo=try&revision=d7f8360718f3
Attachment #8857771 -
Attachment is obsolete: true
Attachment #8858239 -
Flags: review+
| Assignee | ||
Updated•8 years ago
|
Keywords: checkin-needed
| Assignee | ||
Updated•8 years ago
|
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Pushed by ryanvm@gmail.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/6ac3a94bbc87
Skip Flush to old context after device reset. r=dvander
Keywords: checkin-needed
Comment 6•8 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
status-firefox55:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
| Assignee | ||
Comment 7•8 years ago
|
||
Approval Request Comment
[Feature/Bug causing the regression]:
This part of code is added by Bug 1300121
[User impact if declined]:
May run into the crash in Bug 1351349.
[Is this code covered by automated tests?]:
No.
[Has the fix been verified in Nightly?]:
Yes.
[Needs manual test from QE? If yes, steps to reproduce]:
No.
[List of other uplifts needed for the feature/fix]:
None.
[Is the change risky?]:
Not really risky.
[Why is the change risky/not risky?]:
This part of code can be only involved when device reset happened which is rare. And the fix skip the flush command to a invalid context which should be fine.
[String changes made/needed]:
None.
Attachment #8859831 -
Flags: approval-mozilla-beta?
(In reply to Kevin Chen[:kechen] (UTC + 8) from comment #7)
> Created attachment 8859831 [details] [diff] [review]
> ...
> [Has the fix been verified in Nightly?]:
> Yes.
How? Have we seen some crash statistic to support this?
Flags: needinfo?(kechen)
| Assignee | ||
Comment 9•8 years ago
|
||
(In reply to Milan Sreckovic [:milan] from comment #8)
> (In reply to Kevin Chen[:kechen] (UTC + 8) from comment #7)
> > Created attachment 8859831 [details] [diff] [review]
> > ...
> > [Has the fix been verified in Nightly?]:
> > Yes.
>
> How? Have we seen some crash statistic to support this?
There were no more crashes in the nightly channel in Bug 1351349 since the fix. I was expecting the crash would still happen with different entry point if the fix doesn't work.
But since the sample number in the nightly might not enough to support this and I cannot ensure that this part of the code is really tested, I will change this to "No".
Thank you for the reminding.
Flags: needinfo?(kechen)
| Assignee | ||
Comment 11•8 years ago
|
||
Comment on attachment 8859831 [details] [diff] [review]
[Uplift] Skip Flush to old context after device reset;
Rewrite the request comment to avoid the confusion.
Approval Request Comment
[Feature/Bug causing the regression]:
This part of code is added by Bug 1300121
[User impact if declined]:
May run into the crash in Bug 1351349.
[Is this code covered by automated tests?]:
No.
[Has the fix been verified in Nightly?]:
No.
It is landed to Nightly for few days, and no related crash is found so far, but we could not ensure the crash scenario is tested since the user number is fewer in Nightly channel.
[Needs manual test from QE? If yes, steps to reproduce]:
No.
[List of other uplifts needed for the feature/fix]:
None.
[Is the change risky?]:
Not risky.
[Why is the change risky/not risky?]:
This part of code can be only involved when device reset happened which is a rare case. And the fix skip the flush command to a invalid context which should be fine.
[String changes made/needed]:
None.
Comment 12•8 years ago
|
||
Comment on attachment 8859831 [details] [diff] [review]
[Uplift] Skip Flush to old context after device reset;
try to avoid crashes on gpu reset, beta54+
Should be in 54b3
Attachment #8859831 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 13•8 years ago
|
||
| bugherder uplift | ||
status-firefox54:
--- → fixed
Comment 14•8 years ago
|
||
(In reply to Kevin Chen[:kechen] (UTC + 8) from comment #11)
> [Is this code covered by automated tests?]:
> No.
> [Has the fix been verified in Nightly?]:
> No.
> It is landed to Nightly for few days, and no related crash is found so
> far, but we could not ensure the crash scenario is tested since the user
> number is fewer in Nightly channel.
> [Needs manual test from QE? If yes, steps to reproduce]:
> No.
Setting qe-verify- based on Kevin's assessment on manual testing needs.
Flags: qe-verify-
You need to log in
before you can comment on or make changes to this bug.
Description
•