Bug 1356119 - Skip Flush to old context after device reset. r=dvander