gfx/layers/composite/LayerManagerComposite.cpp
@@ -1369,7 +1369,7 @@ void
 LayerManagerComposite::ChangeCompositor(Compositor* aNewCompositor)
 {
   if (mCompositor) {
-    mCompositor->CancelFrame();
+    mCompositor->CancelFrame(false);
   }
   mCompositor = aNewCompositor;
   mTwoPassTmpTarget = nullptr;
